# REMADOM

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/examples/: kl_warmup_cosine.yaml  kl_warmup_linear.yaml  mapref_rna.yaml  mapref_rna_adapt.yaml.yaml  mock_bridge.yaml  mock_hierarchical.yaml  mock_mosaic.yaml  mock_paired.yaml  mock_prediction.yaml  mock_unpaired.yaml  paired_rna_adt.yaml  paired_rna_adt_weighted.yaml  reference_mapping_rna.yaml  train_amp.yaml  train_polished.yaml  train_with_valid.yaml  unpaired_rna_atac_fgw.yaml  unpaired_rna_atac_gw.yaml
docs/: PLAN.md  background.md  bridge_mnn.md  mock_data.md  network_architecture.md  phase1_plan.md  phase2_followup_plan.md  phase2_plan.md  phase3_plan.md  problem_types.md  program_structure.md
docs/checklists/: phase2_validation.md  phase3_validation.md
docs/plans/: README.md  bridge_finetune_plan.md
remadom/: typing.py
remadom/adapters/: arches.py  bridge_head.py  init.py  inject.py  mappers.py
remadom/align/: base.py  coral_multimodal.py  costs.py  graph.py  gw.py  gw_multimodal.py  mmd.py  mmd_multimodal.py  planner.py  sinkhorn.py  temporal.py
remadom/align/solvers/: gw_solver.py  ot_solver.py
remadom/bridges/: base.py  dictionary.py  linmap.py  mnn.py  seeded.py  unimf.py  utils.py
remadom/cli/: embed.py  eval.py  export_data.py  init.py  make_zarr_manifest.py  mapref.py  train.py
remadom/config/: factories.py  resolve.py  schema.py
remadom/config/examples/: unpaired_rna_atac_gw.yaml
remadom/core/: decoders.py  encoders.py  fusion.py  losses.py  multimodal.py  vae.py
remadom/data/: adapters.py  backed.py  composite_dataset.py  csr_dataset.py  datamodule.py  export.py  loaders.py  manifest_loader.py  mock.py  npy_dataset.py  preprocess.py  registries.py  torch_dataset.py  torch_loader.py  train_from_manifest.py  zarr_dataset.py
remadom/eval/: alignment_metrics.py  evaluator.py  metrics.py  mock_eval.py  plots.py  scib_wrapper.py
remadom/graph/: builder.py  laplacian.py
remadom/train/: trainer.py
remadom/utils/: capability.py  checkpoint.py  schedules.py  seed.py  serialization.py
scripts/: compare_bridge_strategies.sh  eval_scib.py  export_and_train_npy.py  generate_all_mock_data.sh  make_mock_multimodal.py  run_all_examples.sh  run_unpaired_fgw.py  smoke_real_manifest.py  smoke_synth_train_eval.py  synth_multimodal.py  toy_bridge_dictionary.py  toy_train.py  toy_unpaired_gw.py  train_with_datamodule.py
tests/: test_early_stopping.py  test_grad_clipping.py  test_warmup_cosine.py
tests/integration/: test_cli_export_manifest.py  test_phase1_training.py
tests/unit/: test_alignment_metrics.py  test_bridge_head.py  test_bridge_providers.py  test_composite_collate.py  test_csr_dataset.py  test_graph_temporal_heads.py  test_mock_evaluation.py  test_mock_generator.py  test_schedules.py  test_seeded_bridge.py
